<resources>
    <string name="app_name">Network Monitor</string>
    <string name="monitor">Monitor</string>
    <string name="test">Test</string>
    <string name="network_monitor">Network Monitor</string>
    <string name="track_you_internet_usage">Track you internet usage</string>
    <string name="turn_on_the_counter">Notification tracking:</string>
    <string name="switchTracker">Off/On</string>
    <string name="total">Total </string>
    <string name="current_download">Down </string>
    <string name="current_upload">Up </string>
    <string name="download">Download:</string>
    <string name="upload">Upload:</string>
    <string name="ping">Ping:</string>
    <string name="start_test">Start test</string>
    <string name="channel">network channel</string>
    <string name="channel_description">description</string>
    <string name="_0">0</string>
    <string name="mb_s">MB/S</string>
    <string name="data_usage">Data Usage</string>
    <string name="textview">TextView</string>
    <string name="icon">icon</string>
    <string name="notification_message">notif example message</string>
    <string name="notification_title">notif example title</string>
    <string name="settings">Settings</string>
    <string name="mobile">Mobile: 20GB</string>
    <string name="refresh">Refresh</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="today">Today</string>
    <string name="show_mobile_data_only">Mobile data only:</string>
    <string name="choose_speed_format">Speed Format</string>
    <string name="MBs">MB/s</string>
    <string name="Mbs">Mb/s</string>
    <string name="wifi">Wifi</string>
    <string name="mobileUsage">Mobile</string>
    <string name="this_month">This month</string>
    <string name="logo">Logo</string>
    <string name="options">Options</string>
    <string name="introduction">Introduction</string>
</resources>